--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lange="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equic="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
+
 <body>
     <!-- Header -->
-    <header class="header"> 
-        <a href="#"class="logo"><span>Dhifan Rizky</span></a>
+    <header class="header">
+        <a href="#" class="logo"><span>Dhifan Rizky</span></a>
 
-        <ul class=""nav-links>
+        <ul class="menu" nav-links>
             <li>
                 <a href="#About">About</a>
             </li>
@@ -29,7 +31,6 @@
             <li>
                 <a href="#Contact">Contact</a>
             </li>
-            
         </ul>
 
         <i class="fa-solid fa-bars" id="menu-icon"></i>
@@ -42,4 +43,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
